# electric

./: .bench-local.sh  .dockerignore  .env.dev  .eslintrc.cjs  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .release-it.json  .tool-versions  AGENTS.md  AGENTS_DESKTOP_CONFIG_PLAN.md  AGENTS_DESKTOP_PLAN.md  AGENTS_DOCS_UPDATE_PLAN.md  AGENTS_INBOX_DELIVERY_MODES_PLAN.md  AGENTS_MARKDOWN_DOCS_PLAN.md  AGENTS_MOBILE_CI_RELEASE_PLAN.md  AGENT_NOTES.md  APP_DESKTOP_MOCKUP_PLAN.md  APP_PAGE_PLAN.md  ARCHITECTURE.md  BENCHMARKS.md  BUG_REPORT_COLLECTIONS_STUCK.md  BUG_REPORT_log_mode_cache_collision.md  CLA.md  CLAUDE.md  CLOUD_SECTION_PLAN.md  CODE_OF_CONDUCT.md  CODE_REVIEW_FINDINGS.md  COMPOSER_INPUT_MOBILE_PLAN.md  COMPOSER_INPUT_PLAN.md  CONTRIBUTING.md  Cargo.toml  DESKTOP_APP_PUBLISH_PLAN.md  Dockerfile  ELECTRIC_CLI_DESKTOP_BUNDLE_PLAN.md  ENTITY_TIMELINE_QUERY_PLAN.md  GITHUB_COMMENT_3488.md  GITHUB_ISSUE_log_mode_cache_collision.md  HOMEPAGE_VISUAL_PLAN.md  (+73 more)
.buildkite/: docker-image.yml
.changeset/: active-conditions-wire-format.md  add-agent-skills.md  add-client-poll.md  add-columnmapper-validation.md  add-desktop-skill-directories.md  add-enabled-option-to-useshape.md  add-fast-loop-detection.md  add-intent-skills.md  add-jsonb-operators.md  add-model-based-property-tests.md  add-onerror-retry-backoff.md  add-openai-codex-provider.md  add-parser-pg-type-definitions.md  add-pause-lock-coordination.md  add-post-subset-snapshots.md  add-projects-working-directory.md  add-send-tool.md  add-state-machine-test-dsl.md  add-system-wake-detection.md  admission-control-check-shape-existence.md  afraid-keys-begin.md  afraid-suns-wink.md  agent-event-source-tools.md  agent-goal-tracking.md  agent-run-failure-details.md  agent-send-origin.md  agent-token-usage.md  agent-tool-timeouts.md  agent-ui-mobile-submit.md  agents-0-5-release.md  agents-app-packaging-ui-improvements.md  agents-configurable-builtin-models.md  agents-deep-links.md  agents-desktop-ci-publishing.md  agents-desktop-cloud-auth.md  agents-desktop-default-playwright-mcp.md  agents-desktop-mcp-add-edit.md  agents-mcp-support.md  agents-mobile-app-icon.md  agents-mobile-app.md  (+1557 more)
.claude/: settings.local.json
.github/: CODEOWNERS  workflows.yml
.husky/: pre-commit
.support/: docker-compose.yml
_artifacts/: domain_discovery_feedback.md  domain_map.yaml  skill_spec.md  skill_tree.yaml
bench/: RESULTS.md  node-server.ts  scale-out.ts  server.bench.ts  vitest.bench.config.ts
caching/: cache.test.ts
common/: .eslintrc.cjs  .prettierrc.cjs  ava.config.mjs  tsconfig.build.json  tsconfig.json
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
conformance/: conformance.test.ts
demo/: .gitignore  Makefile  Makefile.common  bi-directional.lux  bidirectional_multiple_electric.lux  bidirectional_reversed.lux  compose.yaml  electric.exs  electric_b.exs  insert-insert.lux  insert_conflict.lux  insert_insert.lux  one_direction.lux  postgres.conf  services_templates.yaml  shared.luxinc  simple_test.lux  update_wins.lux
docs/: README.md  about.md  agents-development.md  agents-pg-sync-observation-plan.md  agents-principals-implementation-plan.md  count.data.ts  electric-api.yaml  index.md  index.mdx  package-lock.json  package.json  principals-explainer.html  requestsnapshot-flow-explainer.html  requestsnapshot-pr-comment.md  stratovolt-webhook-source-rename-followup.md  subquery-system.md  troubleshooting-electric-proxy-headers.md
e2e/: Makefile  README.md  auth_mock.json  common.luxinc  common.mk  init.sql  perftest_initial_sync.sh  postgres.conf  services_templates.yaml
examples/: .gitignore
examples/linearlite/src-tauri/: Cargo.toml  tauri.conf.json
examples/linearlite/src-tauri/capabilities/: main.json
examples/linearlite/src-tauri/src/: main.rs
examples/tauri-postgres/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
examples/tauri-postgres/src-tauri/icons/: icon.icns
examples/tauri-postgres/src-tauri/src/: chat.rs  embeddings.rs  main.rs  pg.rs  tauri_postgres.rs  utils.rs
examples/tauri/src-tauri/: Cargo.toml
generator/: CHANGELOG.md  Makefile  README.md  package.json  tsconfig.json  vite.config.ts
integration-tests/: Makefile  README.md  electric_dev.sh  run.sh
integration_tests/: .gitignore  00_shared_init.sql  Makefile  Makefile.common.mk  README.md  common.luxinc  common.mk  init-user-db.sh  init.sql  services_templates.yaml
lib/: electric.ex
local-stack/: .envrc  Makefile  README.md  docker-compose.yaml
npm/: README.md  assemble.mjs  targets.json
patches/: @microsoft__fetch-event-source.patch  agent-session-protocol@0.0.2.patch
plans/: DeployStarter.md  sandbox-design.md  sandboxing-investigation.md
proto/: satellite.proto
protocol/: postgres_schema.proto  satellite.proto
research/: idempotent-writes-xmin-approach.md
scripts/: add-changelog-dates.mjs  check-changeset.mjs  check-skill-staleness.mjs  comment-on-release.mjs  dev-coding-session.sh  dev.sh  llms.js  patch_api_spec_version.js  publish_hex.sh  reset_wal.sh  tag-latest.mjs
src/: api.rs  blobstore.rs  declarations.d.ts  engine_hyper.rs  engine_raw.rs  engine_uring.rs  handlers.rs  http1.rs  index.ts  main.rs  store.rs  subs.rs  telemetry.rs  tier.rs  uring_fsync.rs
starter/: README.md  package.json
stuff/: Electric Skunkworks_ Stateless streaming joins.tldr  galvanic_core_algorithm.md  galvanic_v1_design_proposal.md  galvanic_v1_design_proposal_v2.md  possible_design.md  refs.md  wal_lsn_query_back.md
sync_service/: .env.dev  .formatter.exs  .gitignore  README.md  docker-compose.yml  mix.exs
test/: electric.test.ts  electric_test.exs  test_helper.exs
tests/: cache.test.ts  client.test.ts  integration.test.ts  react-hooks.test.tsx
todo-app/: .eslintrc.cjs  README.md  package.json  vite.config.ts
todomvc/: .gitignore  LICENSE  index.html
toolbar/: .gitignore  .prettierignore  README.md  builder.js  copy-wasm-files.js  custom.d.ts  package.json  toolbar-build.js  tsconfig.json  util.ts
website/: CHANGELOG.md  app.md  (+18 more)
(+5330 files in other folders)
