[package]
name = "durable-streams-server"
version = "0.1.0"
edition = "2021"
description = "High-performance Durable Streams server (Rust)"
license = "Apache-2.0"
# 1.75 for `async fn` in traits (the shared http1::ByteSource request reader).
# CI builds on stable; this documents the supported minimum.
rust-version = "1.75"
repository = "https://github.com/durable-streams/durable-streams"
homepage = "https://electric-sql.com/primitives/durable-streams"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
http-body-util = "0.1"
bytes = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
httparse = "1"
libc = "0.2"
percent-encoding = "2"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "fast"] }

# io_uring engine (--http-engine uring): a thread-per-core current-thread tokio
# runtime backed by io_uring for socket and file I/O. Linux-only.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.5"

[profile.release]
lto = true
codegen-units = 1
# Unwind (the default), not abort: a panic in one connection task is caught by
# the runtime and drops only that connection, instead of aborting the whole
# process and killing every other in-flight request. For a network-facing
# server the per-connection isolation is worth more than abort's small
# binary-size / codegen win.
