[package]
name = "durable-streams-server"
version = "0.1.0"
edition = "2021"
description = "High-performance Durable Streams server (Rust)"
license = "Apache-2.0"
# 1.75 for `async fn` in traits (the shared http1::ByteSource request reader).
# CI builds on stable; this documents the supported minimum.
rust-version = "1.75"
repository = "https://github.com/durable-streams/durable-streams"
homepage = "https://electric-sql.com/primitives/durable-streams"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
http-body-util = "0.1"
bytes = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
httparse = "1"
libc = "0.2"
percent-encoding = "2"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "fast"] }

# Structured logging / tracing facade. Always compiled (it is light), but with
# `release_max_level_info` so trace/debug records are stripped from release
# builds at compile time — zero runtime cost when telemetry is off.
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# OpenTelemetry — opt-in via the `telemetry` feature, OFF BY DEFAULT. None of
# these are pulled in (or compiled) for a default build, so the server keeps a
# zero-dependency, zero-overhead telemetry path unless explicitly enabled.
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", optional = true }
opentelemetry-otlp = { version = "0.32", optional = true, features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.32", optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }

[features]
default = []
# Enable OTLP span + metric export over gRPC (tonic). Endpoint/protocol/timeout
# and sampling are configured entirely via the standard OTEL_* env vars.
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
]

# io_uring engine (--http-engine uring): a thread-per-core current-thread tokio
# runtime backed by io_uring for socket and file I/O. Linux-only.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.5"

[profile.release]
lto = true
codegen-units = 1
# Unwind (the default), not abort: a panic in one connection task is caught by
# the runtime and drops only that connection, instead of aborting the whole
# process and killing every other in-flight request. For a network-facing
# server the per-connection isolation is worth more than abort's small
# binary-size / codegen win.
