[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "shell-sidecar", "updater"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.29.1", features = ["full"] }
tauri-plugin-log = { git = "https://github.com/lencx/tauri-plugins-workspace", branch = "dev", features = ["colored"] }
futures = { version = "0.3.28", default-features = false }
pgvector = { version = "0.3", features = ["sqlx"] }
regex = "1.10.3"

env_logger = "0.10.0"
pg-embed = { path = "crates/pg-embed", default-features = true, features = ["rt_tokio", "rt_tokio_migrate"] }
ollama-rs = { path = "crates/ollama-rs", features = ["stream"] }
ort = { version = "1.16.3", features = [ "load-dynamic" ] }

# TODO: Can maybe remove?
log = "0.4.19"
portable-pty = "0.8.1"
fastembed = "1.9.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

